force-app/main/default/objects/Project__c/fields/Closing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Comments__c</fullName>
    <label>Closing Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>