force-app/main/default/objects/Project__c/fields/Closing_Survey__c.field-meta.xml
<CustomField>
    <fullName>Closing_Survey__c</fullName>
    <description>This field is used to determine whether or not CSM wants to run a project closing survey on this project.</description>
    <label>Closing Survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Survey - Office Hours/After Hours</fullName>
            </value>
            <value>
                <fullName>Don’t Survey - Cancelled/Abandoned Project</fullName>
            </value>
            <value>
                <fullName>Don’t Survey - CID/CWD/CIWD</fullName>
            </value>
            <value>
                <fullName>Don’t Survey - Client Declined</fullName>
            </value>
            <value>
                <fullName>Don’t Survey - Low Hours</fullName>
            </value>
            <value>
                <fullName>Don’t Survey - Other</fullName>
            </value>
            <value>
                <fullName>Partner Project - Survey Pending</fullName>
            </value>
            <value>
                <fullName>Pending: Survey interview scheduled</fullName>
            </value>
            <value>
                <fullName>Pending: Survey requests sent</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>