force-app/main/default/objects/Project__c/fields/Go_live_date__c.field-meta.xml
<CustomField>
    <fullName>Go_live_date__c</fullName>
    <label>Go-Live date</label>
    <type>Date</type>
</CustomField>