force-app/main/default/objects/Project__c/fields/Product_Customer__c.field-meta.xml
<CustomField>
    <fullName>Product_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ticket 21680</description>
    <label>Product Customer</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>OA Projects</relationshipLabel>
    <relationshipName>OA_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>