force-app/main/default/objects/Project__c/fields/Project_Kickoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Kickoff_Date__c</fullName>
    <label>Project Kickoff Date</label>
    <type>Date</type>
</CustomField>