force-app/main/default/objects/Project__c/fields/Project_State__c.field-meta.xml
<CustomField>
    <fullName>Project_State__c</fullName>
    <label>Project State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In process</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending Closure</fullName>
            </value>
            <value>
                <fullName>Templates</fullName>
            </value>
            <value>
                <fullName>Closed - Completed</fullName>
            </value>
            <value>
                <fullName>Closed - Abandoned</fullName>
            </value>
            <value>
                <fullName>Closed - Canceled</fullName>
            </value>
            <value>
                <fullName>Closed - Never Should Have Been Created</fullName>
            </value>
            <value>
                <fullName>Closed - Transitioned to Partner</fullName>
            </value>
            <value>
                <fullName>Closed - No longer tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>